--- a/package.json
+++ b/package.json
@@ -6,11 +6,14 @@
     "@babel/preset-env": "^7.18.2",
     "@babel/preset-react": "^7.17.12",
     "babel-loader": "^8.2.5",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-router-dom": "^6.3.0",
     "redux": "^4.2.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.4.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
   },
@@ -21,9 +24,7 @@
     "lib": "lib",
     "test": "test"
   },
-  "scripts": {
-    
-  },
+  "scripts": {},
   "repository": {
     "type": "git",
     "url": "git+https://github.com/samsongs1991/MyTrails.git"
