Optimize n+1 queries for aws attached photos

--- a/package.json
+++ b/package.json
@@ -26,8 +26,7 @@
   },
   "scripts": {
     "postinstall": "webpack",
-    "start": "webpack --watch --mode=development",
-    "postinstall": "webpack"
+    "start": "webpack --watch --mode=development"
   },
   "engines": {
     "node": "10.13.0",
