--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "react-redux": "^8.0.2",
     "react-router-dom": "^5.2.0",
     "redux": "^4.2.0",
-    "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.10.0"
+  },
+  "devDependencies": {
+    "redux-logger": "^3.0.6"
   },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "version": "1.0.0",
@@ -25,8 +27,8 @@
     "test": "test"
   },
   "scripts": {
-    "postinstall": "webpack",
-    "start": "webpack --watch --mode=development"
+    "start": "webpack --watch --mode=development",
+    "postinstall": "webpack"
   },
   "engines": {
     "node": "10.13.0",
